--- a/time_series_group_project.ipynb
+++ b/time_series_group_project.ipynb
@@ -1,6 +1,325 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "1e3efd4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4fcdf16d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zillow_df = pd.read_csv('zillow-carlifornia.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6d637c3",
+   "metadata": {},
+   "source": [
+    "<h3>Initial Exploration </h3>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ae69f145",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>MedianSoldPrice_AllHomes.California</th>\n",
+       "      <th>MedianMortageRate</th>\n",
+       "      <th>UnemploymentRate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2008-02-29</td>\n",
+       "      <td>470000.0</td>\n",
+       "      <td>5.29</td>\n",
+       "      <td>6.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2008-03-31</td>\n",
+       "      <td>441000.0</td>\n",
+       "      <td>5.44</td>\n",
+       "      <td>6.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2008-04-30</td>\n",
+       "      <td>460000.0</td>\n",
+       "      <td>5.42</td>\n",
+       "      <td>6.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2008-05-31</td>\n",
+       "      <td>429000.0</td>\n",
+       "      <td>5.47</td>\n",
+       "      <td>6.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2008-06-30</td>\n",
+       "      <td>437500.0</td>\n",
+       "      <td>5.60</td>\n",
+       "      <td>6.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Date  MedianSoldPrice_AllHomes.California  MedianMortageRate  \\\n",
+       "0  2008-02-29                             470000.0               5.29   \n",
+       "1  2008-03-31                             441000.0               5.44   \n",
+       "2  2008-04-30                             460000.0               5.42   \n",
+       "3  2008-05-31                             429000.0               5.47   \n",
+       "4  2008-06-30                             437500.0               5.60   \n",
+       "\n",
+       "   UnemploymentRate  \n",
+       "0               6.3  \n",
+       "1               6.2  \n",
+       "2               6.4  \n",
+       "3               6.3  \n",
+       "4               6.2  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zillow_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "dcf456d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(107, 4)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zillow_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "716f225d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MedianSoldPrice_AllHomes.California</th>\n",
+       "      <th>MedianMortageRate</th>\n",
+       "      <th>UnemploymentRate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>95.000000</td>\n",
+       "      <td>107.000000</td>\n",
+       "      <td>107.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>399105.263158</td>\n",
+       "      <td>4.186542</td>\n",
+       "      <td>6.823364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>45971.423521</td>\n",
+       "      <td>0.636049</td>\n",
+       "      <td>1.183979</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>335000.000000</td>\n",
+       "      <td>3.290000</td>\n",
+       "      <td>4.700000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>360125.000000</td>\n",
+       "      <td>3.780000</td>\n",
+       "      <td>6.100000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>375000.000000</td>\n",
+       "      <td>4.060000</td>\n",
+       "      <td>7.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>440000.000000</td>\n",
+       "      <td>4.430000</td>\n",
+       "      <td>7.650000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>489000.000000</td>\n",
+       "      <td>6.030000</td>\n",
+       "      <td>9.100000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       MedianSoldPrice_AllHomes.California  MedianMortageRate  \\\n",
+       "count                            95.000000         107.000000   \n",
+       "mean                         399105.263158           4.186542   \n",
+       "std                           45971.423521           0.636049   \n",
+       "min                          335000.000000           3.290000   \n",
+       "25%                          360125.000000           3.780000   \n",
+       "50%                          375000.000000           4.060000   \n",
+       "75%                          440000.000000           4.430000   \n",
+       "max                          489000.000000           6.030000   \n",
+       "\n",
+       "       UnemploymentRate  \n",
+       "count        107.000000  \n",
+       "mean           6.823364  \n",
+       "std            1.183979  \n",
+       "min            4.700000  \n",
+       "25%            6.100000  \n",
+       "50%            7.000000  \n",
+       "75%            7.650000  \n",
+       "max            9.100000  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zillow_df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "bea03430",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 107 entries, 0 to 106\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column                               Non-Null Count  Dtype  \n",
+      "---  ------                               --------------  -----  \n",
+      " 0   Date                                 107 non-null    object \n",
+      " 1   MedianSoldPrice_AllHomes.California  95 non-null     float64\n",
+      " 2   MedianMortageRate                    107 non-null    float64\n",
+      " 3   UnemploymentRate                     107 non-null    float64\n",
+      "dtypes: float64(3), object(1)\n",
+      "memory usage: 3.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "zillow_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22561412",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
