--- a/time_series_group_project.ipynb
+++ b/time_series_group_project.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "411bf29b",
+   "metadata": {},
+   "source": [
+    "### Import Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 155,
    "id": "1e3efd4a",
@@ -46,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27f63fc4",
+   "id": "97c711b5",
    "metadata": {},
    "source": [
     "### Initial Functions"
@@ -55,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "bfa4a469",
+   "id": "b260ccef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,6 +247,7 @@
     }
    ],
    "source": [
+    "#shape of data\n",
     "zillow_df.shape"
    ]
   },
@@ -499,6 +508,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4e92e626",
+   "metadata": {},
+   "source": [
+    "### Create Test and Train Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 165,
    "id": "adea242d",
@@ -512,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "f39b3347",
+   "id": "574ccb2b",
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "40b805a3",
+   "id": "1bde7dfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,8 +559,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "56f48389",
+   "metadata": {},
+   "source": [
+    "### Explore TimeSeries plots, ACF and PACF Plots"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 237,
    "id": "e137c2e0",
    "metadata": {},
    "outputs": [
@@ -623,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "e0a48a2f",
+   "id": "163cfa4d",
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "5674dba3",
+   "id": "71ab1953",
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "61a63ff0",
+   "id": "8fb57d38",
    "metadata": {},
    "outputs": [
     {
@@ -721,18 +746,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 173,
-   "id": "73131a54",
+   "cell_type": "markdown",
+   "id": "d59e0e67",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## use differenced to move further on SARIMA - d1"
+    "On Performing the ADF test for the data, the p value was greater than 0.05, at a confidence of 95%, so we concluded that the data wasn't stationary.\n",
+    "After differencing the data once, the p value = 0.03, thus we reject the null hypothesis and conclude that the differnced data is stationary.\n",
+    "So for SARIMA model, we use d=1 while finding other hyperparameters."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "47b9f630",
+   "id": "9975d4a2",
    "metadata": {},
    "source": [
     "### SARIMA"
@@ -741,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "70ca52ea",
+   "id": "bc404e1b",
    "metadata": {},
    "outputs": [
     {
@@ -832,19 +857,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 175,
-   "id": "a33699a2",
+   "cell_type": "markdown",
+   "id": "2dd9c879",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# ARIMA(4,1,1)(0,1,0)[12]"
+    "#### The best model is ARIMA(4,1,1)(0,1,0)[12], using the auto arima function to fill in all unknown hyperparameters."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "498c3ab4",
+   "id": "b7542dc1",
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +895,7 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "id": "2e5683e8",
+   "id": "bc4ddfaa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -886,7 +909,7 @@
   {
    "cell_type": "code",
    "execution_count": 178,
-   "id": "7c87cd18",
+   "id": "b036e597",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,7 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "id": "78378f09",
+   "id": "1d36a091",
    "metadata": {},
    "outputs": [
     {
@@ -923,7 +946,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b9f82b2",
+   "id": "ca730a61",
    "metadata": {},
    "source": [
     "### ETS"
@@ -960,7 +983,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "1015f465",
+   "id": "e38e2a44",
    "metadata": {},
    "outputs": [
     {
@@ -976,13 +999,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 182,
-   "id": "120bcc4b",
+   "cell_type": "markdown",
+   "id": "5ced814f",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# None-add"
+    "#### By comparing the mape of different ETS models, we conclude that trend=None and seasonality=Add has the least MAPE, and would be our selection"
    ]
   },
   {
@@ -1028,7 +1049,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b01bd286",
+   "id": "827226a7",
    "metadata": {},
    "source": [
     "### PROPHET"
@@ -1037,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "c7c98306",
+   "id": "7b48266d",
    "metadata": {},
    "outputs": [
     {
@@ -1069,7 +1090,7 @@
   {
    "cell_type": "code",
    "execution_count": 219,
-   "id": "0ce51ffe",
+   "id": "35a4c256",
    "metadata": {
     "scrolled": false
    },
@@ -1097,7 +1118,7 @@
   {
    "cell_type": "code",
    "execution_count": 222,
-   "id": "afd5a6cd",
+   "id": "eeffff70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1107,7 +1128,7 @@
   {
    "cell_type": "code",
    "execution_count": 223,
-   "id": "4cbe51dc",
+   "id": "3b544546",
    "metadata": {},
    "outputs": [
     {
@@ -1132,19 +1153,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 224,
-   "id": "59815985",
+   "cell_type": "markdown",
+   "id": "68778ad0",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Load actual test data"
+    "### Test Data and RMSE to pick final model"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 225,
-   "id": "225ae2a4",
+   "id": "4988b2dd",
    "metadata": {},
    "outputs": [
     {
@@ -1258,9 +1277,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e487e096",
+   "metadata": {},
+   "source": [
+    "#### SARIMA"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "d99ba749",
+   "id": "fca6f3b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1271,7 +1298,7 @@
   {
    "cell_type": "code",
    "execution_count": 227,
-   "id": "76540a84",
+   "id": "cca80cce",
    "metadata": {},
    "outputs": [
     {
@@ -1297,9 +1324,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ed0debb4",
+   "metadata": {},
+   "source": [
+    "#### ETS"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 228,
-   "id": "e3d4e843",
+   "id": "f923a116",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1310,7 +1345,7 @@
   {
    "cell_type": "code",
    "execution_count": 229,
-   "id": "006ca2fc",
+   "id": "62e50da5",
    "metadata": {},
    "outputs": [
     {
@@ -1336,9 +1371,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "beba58fa",
+   "metadata": {},
+   "source": [
+    "#### PROPHET"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 230,
-   "id": "5d136be0",
+   "id": "281c546c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1349,7 +1392,7 @@
   {
    "cell_type": "code",
    "execution_count": 231,
-   "id": "4e0500fa",
+   "id": "160b4613",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1360,7 +1403,7 @@
   {
    "cell_type": "code",
    "execution_count": 232,
-   "id": "90daf153",
+   "id": "6989a376",
    "metadata": {},
    "outputs": [
     {
@@ -1386,9 +1429,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6868a3d2",
+   "metadata": {},
+   "source": [
+    "#### RMSE Comparison"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 233,
-   "id": "bbdca28d",
+   "id": "ba5c543c",
    "metadata": {},
    "outputs": [
     {
@@ -1408,19 +1459,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 236,
-   "id": "28d3aff4",
+   "cell_type": "markdown",
+   "id": "50241ae0",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# PROPHET has least RMSE"
+    "#### Out of the 3 models, PROPHET has the least RMSE and thus we choose it to be the final model to predict the Median House Price"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc94f7eb",
+   "id": "39d76a76",
    "metadata": {},
    "outputs": [],
    "source": []
