--- a/time_series_group_project.ipynb
+++ b/time_series_group_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "411bf29b",
+   "id": "71b80e3d",
    "metadata": {},
    "source": [
     "### Import Libraries"
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97c711b5",
+   "id": "6f2375d0",
    "metadata": {},
    "source": [
     "### Initial Functions"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "b260ccef",
+   "id": "11b86b82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e92e626",
+   "id": "6f4f9d0a",
    "metadata": {},
    "source": [
     "### Create Test and Train Data"
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "574ccb2b",
+   "id": "0473f133",
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "1bde7dfb",
+   "id": "7d198452",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56f48389",
+   "id": "6e06baf9",
    "metadata": {},
    "source": [
     "### Explore TimeSeries plots, ACF and PACF Plots"
@@ -648,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "163cfa4d",
+   "id": "7c63996d",
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "71ab1953",
+   "id": "6a8a6d3e",
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "8fb57d38",
+   "id": "ddf6e14b",
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d59e0e67",
+   "id": "98227295",
    "metadata": {},
    "source": [
     "On Performing the ADF test for the data, the p value was greater than 0.05, at a confidence of 95%, so we concluded that the data wasn't stationary.\n",
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9975d4a2",
+   "id": "5a5388a7",
    "metadata": {},
    "source": [
     "### SARIMA"
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "bc404e1b",
+   "id": "680fc0ca",
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dd9c879",
+   "id": "355fd52b",
    "metadata": {},
    "source": [
     "#### The best model is ARIMA(4,1,1)(0,1,0)[12], using the auto arima function to fill in all unknown hyperparameters."
@@ -867,7 +867,7 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "b7542dc1",
+   "id": "ec941f36",
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +895,7 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "id": "bc4ddfaa",
+   "id": "a39c14ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -909,7 +909,7 @@
   {
    "cell_type": "code",
    "execution_count": 178,
-   "id": "b036e597",
+   "id": "d8d29f45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -920,7 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "id": "1d36a091",
+   "id": "a61f3c7b",
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca730a61",
+   "id": "29cbcad7",
    "metadata": {},
    "source": [
     "### ETS"
@@ -983,7 +983,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "e38e2a44",
+   "id": "5fd326d2",
    "metadata": {},
    "outputs": [
     {
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ced814f",
+   "id": "fdb9d834",
    "metadata": {},
    "source": [
     "#### By comparing the mape of different ETS models, we conclude that trend=None and seasonality=Add has the least MAPE, and would be our selection"
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "827226a7",
+   "id": "3ca18e9a",
    "metadata": {},
    "source": [
     "### PROPHET"
@@ -1058,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "7b48266d",
+   "id": "b17fb0f9",
    "metadata": {},
    "outputs": [
     {
@@ -1090,7 +1090,7 @@
   {
    "cell_type": "code",
    "execution_count": 219,
-   "id": "35a4c256",
+   "id": "ace8e565",
    "metadata": {
     "scrolled": false
    },
@@ -1118,7 +1118,7 @@
   {
    "cell_type": "code",
    "execution_count": 222,
-   "id": "eeffff70",
+   "id": "ad62c77e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1128,7 +1128,7 @@
   {
    "cell_type": "code",
    "execution_count": 223,
-   "id": "3b544546",
+   "id": "58d133f1",
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68778ad0",
+   "id": "b250c82f",
    "metadata": {},
    "source": [
     "### Test Data and RMSE to pick final model"
@@ -1163,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": 225,
-   "id": "4988b2dd",
+   "id": "171f4ca2",
    "metadata": {},
    "outputs": [
     {
@@ -1278,7 +1278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e487e096",
+   "id": "3343ee31",
    "metadata": {},
    "source": [
     "#### SARIMA"
@@ -1287,7 +1287,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "fca6f3b6",
+   "id": "327ac329",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1298,7 +1298,7 @@
   {
    "cell_type": "code",
    "execution_count": 227,
-   "id": "cca80cce",
+   "id": "bb0a4461",
    "metadata": {},
    "outputs": [
     {
@@ -1325,7 +1325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed0debb4",
+   "id": "13e392f4",
    "metadata": {},
    "source": [
     "#### ETS"
@@ -1334,7 +1334,7 @@
   {
    "cell_type": "code",
    "execution_count": 228,
-   "id": "f923a116",
+   "id": "e9c9c286",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1345,7 +1345,7 @@
   {
    "cell_type": "code",
    "execution_count": 229,
-   "id": "62e50da5",
+   "id": "2703c285",
    "metadata": {},
    "outputs": [
     {
@@ -1372,7 +1372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beba58fa",
+   "id": "3a6111bb",
    "metadata": {},
    "source": [
     "#### PROPHET"
@@ -1381,7 +1381,7 @@
   {
    "cell_type": "code",
    "execution_count": 230,
-   "id": "281c546c",
+   "id": "3ce445d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1392,7 +1392,7 @@
   {
    "cell_type": "code",
    "execution_count": 231,
-   "id": "160b4613",
+   "id": "c86936ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1403,7 +1403,7 @@
   {
    "cell_type": "code",
    "execution_count": 232,
-   "id": "6989a376",
+   "id": "bf6a91c8",
    "metadata": {},
    "outputs": [
     {
@@ -1430,7 +1430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6868a3d2",
+   "id": "807cecaa",
    "metadata": {},
    "source": [
     "#### RMSE Comparison"
@@ -1438,8 +1438,193 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 243,
+   "id": "d883483c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred_pf=forecast['yhat']\n",
+    "pred_pf.index=actual_test.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "id": "8fbd57a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Median House Price</th>\n",
+       "      <th>SARIMA predictions</th>\n",
+       "      <th>ETS predictions</th>\n",
+       "      <th>PROPHET predictions</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Month</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2016-01-31</th>\n",
+       "      <td>476250</td>\n",
+       "      <td>486163.319475</td>\n",
+       "      <td>477243.911152</td>\n",
+       "      <td>470275.492860</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-02-29</th>\n",
+       "      <td>466000</td>\n",
+       "      <td>484023.424639</td>\n",
+       "      <td>470679.010054</td>\n",
+       "      <td>482762.505487</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-03-31</th>\n",
+       "      <td>485000</td>\n",
+       "      <td>499550.661835</td>\n",
+       "      <td>481184.161701</td>\n",
+       "      <td>483201.925828</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-04-30</th>\n",
+       "      <td>501000</td>\n",
+       "      <td>501195.135263</td>\n",
+       "      <td>482579.146017</td>\n",
+       "      <td>499996.520476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-05-31</th>\n",
+       "      <td>501000</td>\n",
+       "      <td>509199.186867</td>\n",
+       "      <td>487233.787871</td>\n",
+       "      <td>499497.216743</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-06-30</th>\n",
+       "      <td>505000</td>\n",
+       "      <td>523017.690955</td>\n",
+       "      <td>496071.035864</td>\n",
+       "      <td>507826.090492</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-07-31</th>\n",
+       "      <td>507000</td>\n",
+       "      <td>516669.331229</td>\n",
+       "      <td>488199.713128</td>\n",
+       "      <td>504308.463738</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-08-31</th>\n",
+       "      <td>510000</td>\n",
+       "      <td>508799.594946</td>\n",
+       "      <td>482102.345161</td>\n",
+       "      <td>503624.267886</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-09-30</th>\n",
+       "      <td>510000</td>\n",
+       "      <td>503704.025548</td>\n",
+       "      <td>480549.875300</td>\n",
+       "      <td>505718.133828</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-10-31</th>\n",
+       "      <td>523000</td>\n",
+       "      <td>503610.696277</td>\n",
+       "      <td>479399.598312</td>\n",
+       "      <td>501148.458247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-11-30</th>\n",
+       "      <td>506000</td>\n",
+       "      <td>519277.560669</td>\n",
+       "      <td>486346.599449</td>\n",
+       "      <td>497733.371918</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-12-31</th>\n",
+       "      <td>510000</td>\n",
+       "      <td>518450.149085</td>\n",
+       "      <td>484126.107849</td>\n",
+       "      <td>506626.818872</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Median House Price  SARIMA predictions  ETS predictions  \\\n",
+       "Month                                                                 \n",
+       "2016-01-31              476250       486163.319475    477243.911152   \n",
+       "2016-02-29              466000       484023.424639    470679.010054   \n",
+       "2016-03-31              485000       499550.661835    481184.161701   \n",
+       "2016-04-30              501000       501195.135263    482579.146017   \n",
+       "2016-05-31              501000       509199.186867    487233.787871   \n",
+       "2016-06-30              505000       523017.690955    496071.035864   \n",
+       "2016-07-31              507000       516669.331229    488199.713128   \n",
+       "2016-08-31              510000       508799.594946    482102.345161   \n",
+       "2016-09-30              510000       503704.025548    480549.875300   \n",
+       "2016-10-31              523000       503610.696277    479399.598312   \n",
+       "2016-11-30              506000       519277.560669    486346.599449   \n",
+       "2016-12-31              510000       518450.149085    484126.107849   \n",
+       "\n",
+       "            PROPHET predictions  \n",
+       "Month                            \n",
+       "2016-01-31        470275.492860  \n",
+       "2016-02-29        482762.505487  \n",
+       "2016-03-31        483201.925828  \n",
+       "2016-04-30        499996.520476  \n",
+       "2016-05-31        499497.216743  \n",
+       "2016-06-30        507826.090492  \n",
+       "2016-07-31        504308.463738  \n",
+       "2016-08-31        503624.267886  \n",
+       "2016-09-30        505718.133828  \n",
+       "2016-10-31        501148.458247  \n",
+       "2016-11-30        497733.371918  \n",
+       "2016-12-31        506626.818872  "
+      ]
+     },
+     "execution_count": 244,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Predictions=pd.DataFrame(actual_test)\n",
+    "Predictions['SARIMA predictions']=pred_sarima\n",
+    "Predictions['ETS predictions']=pred_ets\n",
+    "Predictions['PROPHET predictions']=pred_pf\n",
+    "Predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 233,
-   "id": "ba5c543c",
+   "id": "4670b1b6",
    "metadata": {},
    "outputs": [
     {
@@ -1460,7 +1645,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50241ae0",
+   "id": "4f44765b",
    "metadata": {},
    "source": [
     "#### Out of the 3 models, PROPHET has the least RMSE and thus we choose it to be the final model to predict the Median House Price"
@@ -1469,7 +1654,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39d76a76",
+   "id": "0f509ab7",
    "metadata": {},
    "outputs": [],
    "source": []
